# nella-bot

./: .env.example  .gitignore  CLAUDE.md  GETTING_STARTED.md  LICENSE  README.md  nella.service  pyproject.toml  slack_manifest.yaml
config/: MEMORY.md  MEMORY.md.EXAMPLE  MEMORY_RULES.md  NOTION.md.EXAMPLE  SOUL.md  SOUL.md.EXAMPLE  TOOLS.md  TOOLS.md.EXAMPLE  TOOL_CONFIRMATIONS.toml.EXAMPLE  USER.md.EXAMPLE
docs/plans/: 2026-02-13-slack-integration-design.md  (+3 more)
prompts/: prompt_history.md
scripts/: deploy.sh  functional_test_prompt.md  google_auth.py  init_mem0_dir.py  linkedin_auth.py  logs.py  test_mem0.py
src/: config.py  db.py  scratch.py  watchdog.py
src/bot/: app.py  (+5 more)
tests/: conftest.py  test_automatic.py  test_browser_agent.py  test_browser_session.py  test_browser_tools.py  test_callback_query.py  test_chunking.py  test_complete_text.py  test_config.py  test_confirmation_config.py  test_confirmations.py  test_db.py  test_extractors.py  test_generate_response.py  test_github_tools.py  test_google_auth.py  test_google_calendar.py  test_google_docs.py  test_google_drive.py  test_google_gmail.py  test_google_people.py  test_image_tools.py  test_linkedin_auth.py  test_linkedin_tools.py  test_log_tools.py  test_memory_store.py  test_memory_tools.py  test_missed_tasks.py  test_models.py  test_notification_channels.py  test_notification_context.py  test_notification_router.py  test_notion_tools.py  test_openai_image_tools.py  test_people_store.py  test_plaud_handler.py  test_prompt.py  test_registry.py  test_scheduler_engine.py  test_scheduler_executor.py  (+28 more)
(+70 files in other folders)
